# Crous_man

./: .gitignore  CMakeLists.txt  README.md
Crous_man/: Crous_man  Game.cpp  InputManager.cpp  InputManager.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp  SoundManager.cpp  SoundManager.hpp  Transform.cpp  Transform.hpp  Util.cpp  Util.hpp
Crous_man/Components/: Camera.cpp  Camera.hpp  Car.cpp  Car.hpp  Collider.cpp  Collider.hpp  ColliderManagerComponentSystem.cpp  ColliderManagerComponentSystem.hpp  DeleteAfterTime.cpp  DeleteAfterTime.hpp  Destructible.cpp  Destructible.hpp  FollowObject.cpp  FollowObject.hpp  Mesh.cpp  Mesh.hpp  PointLight.cpp  PointLight.hpp  Renderer.cpp  Renderer.hpp  RigidBody.cpp  RigidBody.hpp  Spin.cpp  Spin.hpp
Crous_man/Components/Controllers/: CrousManController.cpp  CrousManController.hpp  FlyingController.cpp  FlyingController.hpp  SimpleMovementPlayer.cpp  SimpleMovementPlayer.hpp
Crous_man/ECS/: Bitmap.cpp  Bitmap.hpp  ComponentSystem.cpp  ComponentSystem.hpp  Entity.cpp  Entity.hpp  EntityBuilder.cpp  EntityBuilder.hpp  EntityManager.cpp  EntityManager.hpp  SystemIDs.hpp
Crous_man/SceneObjects/: Camera.cpp  Camera.hpp  LODObject.cpp  LODObject.hpp  MovableCamera.cpp  MovableCamera.hpp  PointLight.cpp  PointLight.hpp  Terrain.cpp  Terrain.hpp
Crous_man/SceneObjects/Solaire/: Earth.cpp  Earth.hpp  Moon.cpp  Moon.hpp  Planet.cpp  Planet.hpp  SpinningObject.cpp  SpinningObject.hpp  Sun.cpp  Sun.hpp
Crous_man/SceneObjects/UtilObjects/: CharacterControlObject.cpp  CharacterControlObject.hpp  KeyboardControlObject.cpp  KeyboardControlObject.hpp  MouseControlObject.cpp  MouseControlObject.hpp  MouseVerticalControlObject.cpp  MouseVerticalControlObject.hpp
Crous_man/Scenes/: ECS_test.cpp  ECS_test.hpp  Object_control.cpp  Object_control.hpp  SampleScene.cpp  SampleScene.hpp  Systeme_solaire.cpp  Systeme_solaire.hpp
Crous_man/Shaders/: BasicGShader.cpp  BasicGShader.glsl  BasicGShader.hpp  BlinnPhongLShader.cpp  BlinnPhongLShader.glsl  BlinnPhongLShader.hpp  BlinnPhongShadowLShader.cpp  BlinnPhongShadowLShader.glsl  BlinnPhongShadowLShader.hpp  ColliderFragmentShader.glsl  ColliderShader.cpp  ColliderShader.hpp  ColliderVertexShader.glsl  DepthMeshEShader.cpp  DepthMeshEShader.glsl  DepthMeshEShader.hpp  GShader.cpp  GShader.hpp  LShader.cpp  LShader.hpp  MeshEShader.cpp  MeshEShader.hpp  MeshShader.cpp  MeshShader.hpp  MeshVertexShader.glsl  PEShader.cpp  PEShader.hpp  QuadEShader.cpp  QuadEShader.hpp  QuadShader.cpp  QuadShader.hpp  Shader.cpp  Shader.hpp  SingleTextureQuadShader.cpp  SingleTextureQuadShader.glsl  SingleTextureQuadShader.hpp  TextureGShader.cpp  TextureGShader.glsl  TextureGShader.hpp
Crous_man/Shaders/EShaders/: BlurQuadEShader.cpp  BlurQuadEShader.glsl  BlurQuadEShader.hpp  DepthMeshEShader.cpp  DepthMeshEShader.glsl  DepthMeshEShader.hpp  SSAOQuadEShader.cpp  SSAOQuadEShader.glsl  SSAOQuadEShader.hpp  ShadowQuadEShader.cpp  ShadowQuadEShader.glsl  ShadowQuadEShader.hpp
Crous_man/Shaders/GShaders/: BasicGShader.cpp  BasicGShader.glsl  BasicGShader.hpp  TextureGShader.cpp  TextureGShader.glsl  TextureGShader.hpp
Crous_man/Shaders/LShaders/: BlinnPhongLShader.cpp  BlinnPhongLShader.hpp  BlinnPhongShadowLShader.cpp  BlinnPhongShadowLShader.glsl  BlinnPhongShadowLShader.hpp  BlinnPhongShadowSSAOLShader.cpp  BlinnPhongShadowSSAOLShader.glsl  BlinnPhongShadowSSAOLShader.hpp
Crous_man/Shaders/PEShaders/: SingleTextureQuadShader.cpp  SingleTextureQuadShader.glsl  SingleTextureQuadShader.hpp
Crous_man/shaders/: default_fragment_shader.glsl  default_vertex_shader.glsl  planet_fragment_shader.glsl  planet_vertex_shader.glsl  sun_fragment_shader.glsl  sun_vertex_shader.glsl  terrain_fragment_shader.glsl  terrain_vertex_shader.glsl
common/: basicShapeRender.cpp  basicShapeRender.hpp  cooldown.cpp  cooldown.hpp  entityPool.cpp  entityPool.hpp  frameBuffer.cpp  frameBuffer.hpp  frustrum.cpp  frustrum.hpp  gBuffer.cpp  gBuffer.hpp  meshGenerator.cpp  meshGenerator.hpp  objloader.cpp  objloader.hpp  octree.cpp  octree.hpp  ray.cpp  ray.hpp  shader.cpp  text2D.cpp  texture.cpp  texture.hpp  textureFramebuffer.cpp  textureFramebuffer.hpp
ressources/: earth.ppm  grass.ppm  heightmap128.pgm  moon.ppm  rock.ppm  snowrock.ppm  sun.ppm
ressources/Models/: dougnut.ply  saucisseCentre.ply
ressources/Models/Scene/: giratoire.ply  giratoireTrot.ply  restoElevation.ply  restoFirst.ply  restoHedge.ply  restoHedge2.ply  restoPizzaFirst.ply  restoPizzaToit.ply  restoSecond.ply  restoToit.ply  restoTrot.ply  tree.ply  treeLeaf.ply  trotGira1.ply  trotGira2.ply  trotGira3.ply  trotGira4.ply  trotGira5.ply
ressources/Models/fragment/: cubeFragment.ply  cubeFragment1.ply  cubeFragment10.ply  cubeFragment11.ply  cubeFragment12.ply  cubeFragment3.ply  cubeFragment4.ply  cubeFragment7.ply  cubeFragment8.ply
ressources/Sounds/: CROUSmanAPOKALIPSS.mid
ressources/Textures/: dougnutColor.ppm  heightmap256.pgm  heightmap64.pgm  laser.ppm  saucisseColor.ppm  skybox.ppm
ressources/Textures/Scene/: giratoireColor.ppm  giratoireTrotColor.ppm  restoFirstColor.ppm  restoHedge2Color.ppm  restoHedgeColor.ppm  restoSecondColor.ppm  restoSecondSpecular.pgm  restoTrotColor.ppm
ressources/fragment/: cubeFragment13.ply  cubeFragment2.ply  cubeFragment5.ply  cubeFragment6.ply
